--- a/app/templates/app-profile/edit-profile.html
+++ b/app/templates/app-profile/edit-profile.html
@@ -1,12 +1,28 @@
 <div>
-	<h3>Edit your Profile</h3>
-	<form ng-submit="vm.editProfile(user)">
+	<h3>Add a Profile</h3>
+	<form ng-submit="vm.addProfile(user)">
 		<input type="text" placeholder="First Name" required ng-model="user.fName">
-		<input type="text" placeholder="Last Name" required ng-model="user.lName">
+		<!-- <input type="text" placeholder="Last Name" required ng-model="user.lName">
 		<input type="text" placeholder="Street Address" required ng-model="user.address">
 		<input type="text" placeholder="City" required ng-model="user.city">
 		<input type="text" placeholder="State" required ng-model="user.state">
-		<input type="text" placeholder="Zip Code" required ng-model="user.zip"><input type="text" placeholder="Country" required ng-model="user.country">
+		<input type="text" placeholder="Zip Code" required ng-model="user.zip"><input type="text" placeholder="Country" required ng-model="user.country"> -->
+		<button>Submit</button>
+	</form>
+</div>
+
+
+
+
+<div>
+	<h3>Edit your Profile</h3>
+	<form ng-submit="vm.editProfile(user)">
+		<input type="text" placeholder="First Name" required ng-model="user.fName">
+		<!-- <input type="text" placeholder="Last Name" required ng-model="user.lName">
+		<input type="text" placeholder="Street Address" required ng-model="user.address">
+		<input type="text" placeholder="City" required ng-model="user.city">
+		<input type="text" placeholder="State" required ng-model="user.state">
+		<input type="text" placeholder="Zip Code" required ng-model="user.zip"><input type="text" placeholder="Country" required ng-model="user.country"> -->
 		<button>Submit</button>
 	</form>
 </div>
